# recolor

./: README.md  setup.cfg
src/recolor/: __init__.py  __main__.py
