[bdist_wheel]
universal = 1

[metadata]
name = recolor
version = attr: recolor.__version__
author = Fritz Reese
author_email = fritzoreese@gmail.com
description = Execute a command whenever a file's status changes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fritzr/recolor
project_urls =
    Issues = https://github.com/fritzr/recolor/issues
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: System :: Shells
    Topic :: Utilities

[options]
package_dir =
    =src
packages = find:
python_requires = >=2.7

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    recolor = recolor.__main__:main
